# MFC

./: :q  '  .all-contributorsrc  .coderabbit.yaml  .cursorrules  .env  .ffmt.toml  .fortitude.toml  .fortls.json  .fortlsrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .link_config.json  .linkspector.yml  .lychee.toml  .pr_agent.toml  .typos.toml  2Dshinputsod1.5.py  2Dshinputsod18.py  3Dshinput_new.py  AMR_AMD_FLANG_NOTES.md  AUTHORS  BASELINE_COVERAGE_RESULTS.md  CITATION.cff  CI_COVERAGE_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFIGURE  CONTRIBUTING.md  COPYRIGHT  COVERAGE_BRANCH_SUMMARY.md  COVERAGE_FINAL_SUMMARY.md  COVERAGE_GUIDE.md  COVERAGE_IMPROVEMENTS.md  COVERAGE_INDEX.md  COVERAGE_PROGRESS_UPDATE.md  COVERAGE_QUICK_REFERENCE.md  (+116 more)
src/post_process_code/: CMakeLists.txt  DoxygenLayout.xml  Makefile  m_compile_specific.f90  m_compile_specific.mod  m_compile_specific_gcc.f90  m_data_input.f90  m_data_input.mod  m_data_output.f90  m_data_output.mod  m_derived_types.f90  m_derived_types.mod  m_derived_variables.f90  m_derived_variables.mod  m_fftw.f90  m_fftw.mod  m_global_parameters.f90  m_global_parameters.mod  m_mpi_proxy.f90  m_mpi_proxy.mod  m_start_up.f90  m_start_up.mod  m_variables_conversion.f90  m_variables_conversion.mod  mainpage.txt  makefile  p_main.f90  post_process
src/pre_process_code/: CMakeLists.txt  Makefile  m_compile_specific.f90  m_compile_specific.mod  m_compile_specific_gcc.f90  m_compile_specific_intel.f90  m_data_output.f90  m_data_output.mod  m_derived_types.f90  m_derived_types.mod  m_eigen.f90  m_global_parameters.f90  m_global_parameters.fpp  m_global_parameters.mod  m_grid.f90  m_grid.mod  m_initial_condition.f90  m_initial_condition.fpp  m_initial_condition.mod  m_mpi_proxy.f90  m_mpi_proxy.mod  m_start_up.f90  m_start_up.fpp  m_start_up.mod  m_variables_conversion.f90  m_variables_conversion.mod  makefile  p_main.f90  pre_process
src/simulation_code/: .m_weno.f90.swp  CMakeLists.txt  Makefile  m_bubbles.f90  m_bubbles.mod  m_cbc.f90  m_cbc.mod  m_compile_specific.f90  m_compile_specific.mod  m_compile_specific_gcc.f90  m_compile_specific_intel.f90  m_data_output.f90  m_data_output.mod  m_derived_types.f90  m_derived_types.mod  m_derived_variables.f90  m_derived_variables.mod  m_eigen.f90  m_fftw.f90  m_fftw.fpp  m_fftw.mod  m_gauss.f90  m_global_parameters.f90  m_global_parameters.fpp  m_global_parameters.mod  m_mpi_proxy.f90  m_mpi_proxy.fpp  m_mpi_proxy.mod  m_qbmm.f90  m_qbmm.fpp  m_rhs.f90  m_rhs.mod  m_riemann_solvers.f90  m_riemann_solvers.fpp  m_riemann_solvers.mod  m_start_up.f90  m_start_up.fpp  m_start_up.mod  m_time_steppers.f90  m_time_steppers.mod  (+10 more)
toolchain/: Dockerfile  bench.yaml  cce_simulation_workgroup_256.sh  coverage.sh  coverage_fixed.sh  coverage_simple.sh  indenter.py  load.sh  main.py  mfc-case-schema.json  mfc.dev.yaml  mfc.py  modules  pyproject.toml  requirements.txt  setup.py  util.sh
toolchain/bootstrap/: cmake.sh  completions.sh  docker.sh  format.sh  format_file.sh  format_python.sh  lint.sh  modules.sh  precheck.sh  python.sh  spelling.sh  verrou.sh
toolchain/cmake/: FindFFTW.cmake  FindHDF5.cmake  FindSILO.cmake  FindcuTENSOR.cmake  README.md  configuration.cmake.in
toolchain/cmake/regular/: FindFFTW.cmake  FindLAPACK.cmake
toolchain/completions/: _mfc  mfc.bash
toolchain/dependencies/: CMakeLists.txt  FindSILO.cmake  Silo-GNU-13.patch  Silo.patch
toolchain/mfc/: analytic_expr.py  args.py  bench.py  build.py  case.py  case_utils.py  case_validator.py  clean.py  common.py  completion.py  count.py  fp_precision_lines.py  fp_stability.py  fp_stability_metrics.py  fp_stability_report.py  fp_stability_runners.py  gen_case_constraints_docs.py  gen_physics_docs.py  generate.py  ide.py  init.py  jwl_products.py  lint_docs.py  lint_param_docs.py  lint_source.py  lock.py  main.py  params_cmd.py  printer.py  sched.py  state.py  test_analytic_expr.py  test_fp_precision_lines.py  test_fp_stability.py  test_lint_source.py  test_mg_eos.py  user.py  user_guide.py  validate.py  viz.py
toolchain/mfc/cfg/: lock.py  user.py
toolchain/mfc/cli/: __init__.py  argparse_gen.py  commands.py  completion_gen.py  docs_gen.py  schema.py  test_cli.py
toolchain/mfc/data/: lock.py  user.py
toolchain/mfc/packer/: errors.py  pack.py  packer.py  tol.py
toolchain/mfc/params/: __init__.py  ast_analyzer.py  case_types.py  compare.py  definitions.py  descriptions.py  errors.py  migrate.py  namelist_parser.py  namelist_targets.py  registry.py  schema.py  suggest.py  validate.py
toolchain/mfc/params_tests/: .gitignore  __init__.py  coverage.py  inventory.py  mutation_tests.py  negative_tests.py  runner.py  snapshot.py  test_definitions.py  test_flag_helper.py  test_fortran_gen.py  test_hypoelasticity_constraints.py  test_integration.py  test_migrate.py  test_namelist_targets.py  test_names.py  test_registry.py  test_schema.py  test_validate.py
toolchain/mfc/run/: :wq  archive.py  case_dicts.py  engines.py  input.py  mpi_bins.py  queues.py  run.py  test_archive.py
toolchain/mfc/test/: _convergence_common.py  case.py  cases.py  cases.py.backup  cases_fixed.py  convergence.py  coverage.py  coverage_build.py  pack.py  run_convergence.py  run_convergence_1d.py  run_sod.py  run_temporal_order.py  test.py  test_coverage_unit.py  test_jwl_inverse.py
toolchain/mfc/tests/: case.py  cases.py  cases_master.py  pack.py  tests.py  threads.py
toolchain/mfc/util/: common.py  printer.py
toolchain/mfc/viz/: __init__.py  _step_cache.py  interactive.py  reader.py  renderer.py  silo_reader.py  (+3 more)
toolchain/patches/: fftw-cmake-fix.patch  fypp-linemarker-resync.patch
toolchain/scripts/: format.sh  gen_thermochem.py  load.sh
toolchain/templates/: aces.mako  amdfund.mako  anvil.mako  bridges2.mako  carpenter-cray.mako  carpenter.mako  default.mako  delta.mako  deltaai.mako  frontier.mako  frontier_amd.mako  hipergator.mako  isaac.mako  lsf.sh  nautilus.mako  oscar.mako  pbs.sh  phoenix-bench.mako  phoenix.mako  phoenix_ifx.mako  santis.mako  slurm.sh  summit.mako  tuo.mako  turing.mako
(+7927 files in other folders)
